Added css file.

--- a/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
+++ b/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Library3000</title>
+        <link href="/WEB-INF/styles/library3000.css" rel="stylesheet">
+    </head>
     <body>
 
         <div id="hello">
