--- a/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
+++ b/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
@@ -2,21 +2,16 @@
 <html>
     <head>
         <title>Library3000</title>
-        <link href="/WEB-INF/styles/library3000.css" rel="stylesheet">
+        <link href="../styles/library3000.css" type="text/css"  rel="stylesheet">
     </head>
     <body>
 
-        <div id="hello">
-            <div class="content"></div>
+        <div id="clickArea">Click here</div>
+        <div id="logo">
+            <img id="logo_img" src="http://www.logodesignlove.com/images/logotypes/library-logo.gif">
         </div>
 
-        <div class="content"></div>
-
-        <script src="/WEB-INF/scripts/jquery/jquery-2.0.3.js"></script>
+        <script src="../scripts/jquery/jquery-2.0.3.js"></script>
         <script type="text/javascript" src="client.js"></script>
-        <script type="text/javascript">
-            showHello();
-        </script>
-
     </body>
 </html>
