Added own library logo!

--- a/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
+++ b/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
@@ -8,7 +8,7 @@
 
         <div id="clickArea">Click here</div>
         <div id="logo">
-            <img id="logo_img" src="http://www.logodesignlove.com/images/logotypes/library-logo.gif">
+            <img id="logo_img" src="../images/logo-library3000-small.png">
         </div>
 
         <script src="../scripts/jquery/jquery-2.0.3.js"></script>
