--- a/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
+++ b/library3000-ui/src/main/webapp/WEB-INF/pages/index.html
@@ -6,10 +6,12 @@
     </head>
     <body>
 
-        <div id="clickArea">Click here</div>
+        <div id="clickArea">Open Logo!</div>
         <div id="logo">
             <img id="logo_img" src="../images/logo-library3000-small.png">
         </div>
+        <p>
+        <div id="space-invader"></div>
 
         <script src="../scripts/jquery/jquery-2.0.3.js"></script>
         <script type="text/javascript" src="client.js"></script>
